# Streamlit-2024

./: pyproject.toml
summerize_pdf/: app.py  requirements.txt
